--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+.box {
+	opacity: 0.5;
+}
 .container {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -9,6 +12,7 @@
 .container > div {
 	background: #eee;
 	padding: 1em;
+	opacity: 0.5;
 }
 .container > div:nth-child(odd) {
 	background: #ddd;
@@ -16,19 +20,19 @@
 .box1 {
 	/*align-self: start;*/
 	grid-column:1;
-	grid-row:1/7;
+	grid-row:2/7;
 	border: red 1px solid;
 }
 .box2 {
 	/*align-self: end;*/
-	grid-column: 2/4;
+	grid-column: 1/5;
 	grid-row:1;
 	border: blue 1px solid;
 }
 .box3 {
 	/*justify-self: end;*/
 	grid-column: 4/5;
-	grid-row: 1/3;
+	grid-row: 2/3;
 	border: green 1px solid;
 }
 .box4 {
@@ -39,11 +43,20 @@
 .box5 {
 	grid-column: 4/5;
 	grid-row: 3/5;
+	border-right: yellow 1px solid;	
 }
 .box6 {
 	grid-column: 4/5;
 	grid-row: 5/7;
+	border: black 1px solid;
+}
+.box7 {
+	grid-column: 1/5;
+	grid-row: 1;
+	border: magenta 1px solid;
+	padding-bottom: 10em;
 }
 .footer {
-
+	text-align: center;
+	font-weight: bold;
 }
